--- a/hello.html
+++ b/hello.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		Hello, world!
-		<h1><style="color:blue;">Welcome to my site</h1>
+		<h1><style="color:red;">Welcome to my site</h1>
 		<h2>yo</h2>
 	</body>
 </html>		
