--- a/hello.html
+++ b/hello.html
@@ -2,10 +2,15 @@
 <html lang="en">
 	<head>
 		<title>Hello World!</title>
+		<style>
+			h1 {
+				color: red;
+			}
+		</style>
 	</head>
 	<body>
 		Hello, world!
-		<h1><style="color:red;">Welcome to my site!!!</h1>
+		<h1>Welcome to my site!!!</h1>
 		<h2>yo</h2>
 	</body>
 </html>		
